<resources>
    <string name="app_name">FitnessApp</string>
    <string name="cardio">Cardio</string>
    <string name="shoulder">Shoulder</string>
    <string name="biceps">Biceps</string>
    <string name="back">Back</string>
    <string name="legs">Legs</string>
    <string name="abs">Abs</string>
    <string name="chest">Chest</string>
    <string name="triceps">Triceps</string>
    <string name="weight">WEIGHT (lbs):</string>
    <string name="reps">REPS:</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="title_activity_exercise_log">ExerciseLogActivity</string>
</resources>
